# rust-compiler

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  lexer.rs  lexer_tests.rs  lib.rs  main.rs  parser.rs  parser_tests.rs  token.rs
tests/: integration_test.rs  lexer_integration_test.rs
tests/variable_statement/: expect.json
