[package]
name = "rust_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.49"
regex = "1.10.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "example"
harness = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

