[package]
name = "rust_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.49"
regex = "1.10.5"
rustyline = "14.0.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[lib]
name = "rust_compiler"
path = "src/lib.rs"

[[bin]]
name = "rust_compiler_bin"
path = "src/main.rs"

[[bench]]
name = "example"
harness = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

