[package]
name = "rust_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
name = "rust_compiler"
path = "src/lib.rs"

[[bin]]
name = "rust_compiler_bin"
path = "src/main.rs"
